# cpp-samples

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
Module_1/: CMakeLists.txt
Module_1/bank_account/: CMakeLists.txt
Module_1/bank_account/include/: CMakeLists.txt
Module_1/bank_account/src/: CMakeLists.txt  bank_account.cpp
Module_1/dog_class/: CMakeLists.txt
Module_1/dog_class/include/: CMakeLists.txt  dog_class.hpp
Module_1/dog_class/src/: CMakeLists.txt  dog_class.cpp
Module_1/first_touch/: CMakeLists.txt
Module_1/first_touch/include/: CMakeLists.txt
Module_1/first_touch/src/: CMakeLists.txt
Module_1/rectangle/: CMakeLists.txt
Module_1/rectangle/include/: CMakeLists.txt  rectangle.hpp
Module_1/rectangle/src/: CMakeLists.txt  rectangle.cpp
Module_1/simple_class/: CMakeLists.txt
Module_1/simple_class/include/: CMakeLists.txt  person.hpp
Module_1/simple_class/src/: CMakeLists.txt  person.cpp
Module_1/vector/: CMakeLists.txt
Module_1/vector/include/: CMakeLists.txt
Module_1/vector/src/: CMakeLists.txt  vector.cpp
Module_1/vector_strings/: CMakeLists.txt
Module_1/vector_strings/include/: CMakeLists.txt
Module_1/vector_strings/src/: CMakeLists.txt  vector_strings.cpp
assets/: location.txt
doc/: git-tips.md
include/: CMakeLists.txt  assignment.01.hpp  libassignment-01.hpp
include/SFML/: CMakeLists.txt  asset.hpp  display.hpp  draw.hpp  input.hpp  input_event.hpp  text.hpp  texture_loader.hpp
include/characters/: CMakeLists.txt  character.hpp
include/characters/enemies/: CMakeLists.txt  blackknight.hpp  dragon.hpp  enemy.hpp  finalboss.hpp  goblin.hpp
include/characters/npcs/: CMakeLists.txt  chest.hpp  door.hpp  npc.hpp  shopkeeper.hpp  wizard.hpp
include/characters/players/: CMakeLists.txt  frog.hpp  human.hpp  orc.hpp  player.hpp
include/game/: CMakeLists.txt  chamber.hpp  game.hpp  gameTile.hpp
include/items/: CMakeLists.txt  item.hpp
include/items/consumables/: CMakeLists.txt  consumable.hpp
include/items/equipments/: CMakeLists.txt  equipment.hpp
plan/: DungeonCrawlerUML.xml
src/: CMakeLists.txt  assignment.01.cpp  assignment.02.cpp  dungeon-crawler.cpp  libassignment-01.cpp  libassignment-02.cpp
src/SFML/: asset.cpp  display.cpp  draw.cpp  input.cpp  text.cpp  texture_loader.cpp
src/characters/: .character.cpp.swp  character.cpp
src/characters/enemies/: blackknight.cpp  dragon.cpp  enemy.cpp  enemy.hpp  finalboss.cpp  finalboss.hpp  goblin.cpp  goblin.hpp
src/characters/npcs/: chest.cpp  door.cpp  npc.cpp  npc.hpp  shopkeeper.cpp  shopkeeper.hpp  wizard.cpp  wizard.hpp
src/characters/players/: frog.cpp  human.cpp  orc.cpp  player.cpp
src/game/: chamber.cpp  game.cpp  gameTile.cpp
src/items/: item.cpp
src/items/consumables/: consumable.cpp
src/items/equipments/: equipment.cpp
test/: assignment-01.cpp  assignment-02.cpp
tests/: CMakeLists.txt
