cmake_minimum_required(VERSION 3.5)

add_library(input SHARED input.hpp ${dungeon-crawler_SOURCE_DIR}/SFML/input.cpp)
set_target_properties(input PROPERTIES LINKER_LANGUAGE CXX)
add_library(draw SHARED draw.hpp ${dungeon-crawler_SOURCE_DIR}/SFML/draw.cpp)
set_target_properties(draw PROPERTIES LINKER_LANGUAGE CXX)
add_library(text SHARED text.hpp ${dungeon-crawler_SOURCE_DIR}/SFML/text.cpp)
set_target_properties(text PROPERTIES LINKER_LANGUAGE CXX)
add_library(asset SHARED asset.hpp ${dungeon-crawler_SOURCE_DIR}/SFML/asset.cpp)
target_link_libraries(asset PRIVATE draw text)
set_target_properties(asset PROPERTIES LINKER_LANGUAGE CXX)
add_library(display SHARED display.hpp ${dungeon-crawler_SOURCE_DIR}/SFML/display.cpp)
target_link_libraries(display PRIVATE input asset draw text)
set_target_properties(display PROPERTIES LINKER_LANGUAGE CXX)
add_library(texture_loader SHARED texture_loader.hpp ${dungeon-crawler_SOURCE_DIR}/SFML/texture_loader.cpp)
target_link_libraries(texture_loader PRIVATE asset)
set_target_properties(texture_loader PROPERTIES LINKER_LANGUAGE CXX)
